payflow-platform-config/overlays/dev/patch-deploy-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-worker
spec:
  template:
    spec:
      containers:
        - name: worker
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
