payflow-platform-config/overlays/dev/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payflow-api
spec:
  rules:
    - host: api.dev.payflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payflow-api
                port:
                  name: http
